cmake_minimum_required(VERSION 2.6)
cmake_policy(VERSION 2.6.4)

project(GiGiSDL)

if (BUILD_SDL_DRIVER)
    message("-- Configuring GiGiSDL")
    find_package(SDL)
    if (SDL_FOUND)
        include_directories(${SDL_INCLUDE_DIR})
    else ()
        set(BUILD_SDL_DRIVER OFF)
        message("     Warning: SDL could not be found.  Disabling the SDL build.")
    endif ()
endif ()

if (BUILD_SDL_DRIVER)
    set(THIS_LIB_SOURCES SDLGUI.cpp)
    set(THIS_LIB_LINK_LIBS GiGi ${SDL_LIBRARY})
    library_all_variants(GiGiSDL)
endif ()
