cmake_minimum_required(VERSION 2.6)
cmake_policy(VERSION 2.6.4)

if (BUILD_OGRE_OIS_PLUGIN)
    message("-- Configuring Ogre OIS Input Plugin")
    find_package(OIS)
    if (OIS_FOUND)
        include_directories(${OIS_INCLUDE_DIR})
        link_directories(${OIS_LIB_DIR})
    else ()
        set(BUILD_OGRE_OIS_PLUGIN OFF)
        message("     Warning: OIS could not be found.  Disabling the OIS build.")
    endif ()
endif ()

if (BUILD_OGRE_DRIVER)
    set(THIS_LIB_SOURCES OgreGUIInputPlugin.cpp)
    set(THIS_LIB_LINK_LIBS GiGiOgre ${OIS_LIBRARIES})
    library_all_variants(GiGiOgrePlugin_OIS)
endif ()
